Add rename event subscriber.

--- a/Resources/translations/darvin_file.ru.yaml
+++ b/Resources/translations/darvin_file.ru.yaml
@@ -4,7 +4,7 @@ archive:
             submit:  Архивировать файлы
             success: Файлы архивированы
 
-image:
+file:
     edit:
         success: Файл сохранен
     entity:
